--- a/Android/app/src/main/res/drawable/card_back.xml
+++ b/Android/app/src/main/res/drawable/card_back.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="#aaffff"
-        android:endColor="#338080"
-        android:centerColor="#aaffff"
-        android:angle="90">
-    </gradient>
-    <corners
-        android:radius="20dp">
-    </corners>
+    <solid
+        android:color="#dfafdf">
+
+    </solid>
+    <stroke
+        android:width="4dp"
+        android:color="#000000">
+    </stroke>
 </shape>
