--- a/Android/app/src/main/res/layout/routine_card.xml
+++ b/Android/app/src/main/res/layout/routine_card.xml
@@ -8,10 +8,10 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/rou_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView4"
+        android:layout_alignStart="@+id/rou_time"
         android:layout_alignBottom="@+id/edit_btn"
         android:layout_marginStart="-2dp"
         android:layout_marginBottom="10dp"
@@ -27,7 +27,7 @@
         android:text="Edit" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/rou_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/start_btn"
