Soba Noodles Started

--- a/Android/app/src/main/res/layout/content_soba_noodles.xml
+++ b/Android/app/src/main/res/layout/content_soba_noodles.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".spaghetti_squash"
-    tools:showIn="@layout/activity_spaghetti_squash">
+    tools:context=".soba_noodles"
+    tools:showIn="@layout/activity_soba_noodles">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView5"
         android:layout_width="146dp"
         android:layout_height="149dp"
         android:layout_marginStart="16dp"
@@ -19,40 +19,41 @@
         tools:srcCompat="@drawable/spaghet" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView11"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="29dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
-        android:text="Spaghetti Squash"
+        android:text="Soba Noodles"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView12"
         android:layout_width="199dp"
         android:layout_height="35dp"
         android:layout_marginTop="8dp"
         android:text="Ingredients"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/editText11" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView13"
         android:layout_width="199dp"
         android:layout_height="35dp"
         android:layout_marginTop="8dp"
         android:text="Preparation"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintStart_toStartOf="@+id/editText13"
+        app:layout_constraintTop_toBottomOf="@+id/editText13" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editText11"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -65,30 +66,13 @@
         android:inputType="textMultiLine"
         android:text="A healthy alternative to spaghetti, easy and quick to make, and can be nicely seasoned quite easily."
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <EditText
-        android:id="@+id/editText2"
-        android:layout_width="0dp"
-        android:layout_height="94dp"
-        android:layout_marginTop="4dp"
-        android:padding="4dp"
-        android:background="@drawable/food_card_background"
-        android:ems="10"
-        android:editable="false"
-        android:inputType="textMultiLine"
-        android:text="1 Spaghetti Squash \n1 Tablespoon oil \n1 Pinch of Sea Salt"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editText12"
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginTop="16dp"
@@ -97,14 +81,25 @@
         android:editable="false"
         android:ems="10"
         android:inputType="textMultiLine"
+        android:text="1. Heat up oven to 400F \n2. Cut the squash in half length-wise \n3. Scoop out all of the seeds and stringy parts \n4. Coat the inside with oil and salt accordingly \n5. Cook for 40 minutes \n6. Take the squash out and scrape out the stringy spaghetti left"
         android:textSize="12sp"
-        android:text="1. Heat up oven to 400F \n2. Cut the squash in half length-wise
-3. Scoop out all of the seeds and stringy parts
-4. Coat the inside with oil and salt accordingly
-5. Cook for 40 minutes
-6. Take the squash out and scrape out the stringy spaghetti left"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintEnd_toEndOf="@+id/editText13"
+        app:layout_constraintStart_toStartOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <EditText
+        android:id="@+id/editText13"
+        android:layout_width="354dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="4dp"
+        android:padding="4dp"
+        android:background="@drawable/food_card_background"
+        android:editable="false"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:text="1 Spaghetti Squash \n1 Tablespoon oil \n1 Pinch of Sea Salt"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/editText11"
+        app:layout_constraintStart_toStartOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 </android.support.constraint.ConstraintLayout>
