--- a/Android/app/src/main/res/drawable/card_back.xml
+++ b/Android/app/src/main/res/drawable/card_back.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#dfafdf">
+        android:color="#ffffff">
 
     </solid>
     <stroke
-        android:width="4dp"
+        android:width="1dp"
         android:color="#000000">
     </stroke>
 </shape>
