--- a/Android/app/src/main/res/layout/routine_card.xml
+++ b/Android/app/src/main/res/layout/routine_card.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="8dp">
 
     <LinearLayout
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/card_back"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -51,41 +53,50 @@
 
         </RelativeLayout>
 
+        <ImageView
+            android:id="@+id/divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleX="5"
+            android:src="@drawable/break_line"
+            android:visibility="gone"/>
+
         <RelativeLayout
             android:id="@+id/expand_items"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone">
-            <Button
-                android:id="@+id/delete_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
-                android:text="Delete"/>
 
             <Button
                 android:id="@+id/edit_btn"
+                android:background="@android:color/transparent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="16dp"
                 android:text="Edit"/>
 
+            <Button
+                android:id="@+id/delete_btn"
+                android:background="@android:color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:text="Delete"/>
+
+
         </RelativeLayout>
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/expand_arrow"
+            android:contentDescription="arrow"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/expand_arrow"
-                android:contentDescription="arrow"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/arrow_down_float" />
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/arrow_down_float" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
