--- a/Android/app/src/main/res/menu/menubar_alt.xml
+++ b/Android/app/src/main/res/menu/menubar_alt.xml
@@ -18,7 +18,7 @@
         android:title="Logout" />
     <item
         app:showAsAction="always"
-        android:title="Calender"
-        android:icon="@android:drawable/ic_menu_my_calendar"/>
+        android:title="Home"
+        android:icon="@drawable/home_icon"/>
 
 </menu>
