--- a/Android/app/src/main/res/menu/menubar.xml
+++ b/Android/app/src/main/res/menu/menubar.xml
@@ -3,20 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/profile_option"
-        android:title="Prototype" />
+        android:title="Profile" />
     <item
         android:id="@+id/meals_option"
         android:title="Meals" />
     <item
-        android:id="@+id/calender_option"
-        android:title="Calender" />
-    <item
-        android:id="@+id/workouts_option"
-        android:title="Workouts" />
-    <item
         android:id="@+id/logout_option"
         android:title="Logout" />
     <item
+        android:id="@+id/calendar_big_option"
         app:showAsAction="always"
         android:title="Calender"
         android:icon="@android:drawable/ic_menu_my_calendar"/>
