--- a/Android/app/src/main/res/menu/menubar_alt.xml
+++ b/Android/app/src/main/res/menu/menubar_alt.xml
@@ -3,22 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/profile_option"
-        android:title="Prototype" />
+        android:title="Profile" />
     <item
         android:id="@+id/meals_option"
         android:title="Meals" />
     <item
         android:id="@+id/calender_option"
-        android:title="Calender" />
-    <item
-        android:id="@+id/workouts_option"
-        android:title="Workouts" />
+        android:title="Calendar" />
     <item
         android:id="@+id/logout_option"
         android:title="Logout" />
     <item
+        android:id="@+id/home_big_option"
         app:showAsAction="always"
         android:title="Home"
         android:icon="@drawable/home_icon"/>
-
 </menu>
