Added QR code activity, without icon

--- a/Android/app/src/main/res/menu/menubar_homepage.xml
+++ b/Android/app/src/main/res/menu/menubar_homepage.xml
@@ -14,6 +14,10 @@
         android:id="@+id/calendar_big_option"
         app:showAsAction="always"
         android:title="Calender"
-        android:icon="@android:drawable/ic_menu_my_calendar"/>
-
+        android:icon="@drawable/calendar_icon" />
+    <item
+        android:id="@+id/qr_code_option"
+        app:showAsAction="always"
+        android:title="Scan QR code"
+        android:icon="@drawable/qr_code_icon" />
 </menu>
