--- a/Android/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Android/app/src/main/res/layout/activity_edit_profile.xml
@@ -18,7 +18,8 @@
         android:inputType="textPersonName"
         android:layout_centerHorizontal="true"
         tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="37dp" />
+        tools:layout_editor_absoluteY="37dp"
+        android:hint="username"/>
 
     <EditText
         android:id="@+id/pass_field"
@@ -28,7 +29,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:hint="password"/>
 
     <EditText
         android:id="@+id/pass_conf_field"
@@ -39,7 +41,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:hint="password"/>
 
     <EditText
         android:id="@+id/email_field"
@@ -49,7 +52,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textEmailAddress"
+        android:hint="email"/>
 
     <Button
         android:id="@+id/canc_btn"
@@ -58,7 +62,8 @@
         android:layout_below="@+id/email_field"
         android:layout_alignStart="@+id/pass_field"
         android:layout_marginTop="16dp"
-        android:text="@android:string/cancel" />
+        android:text="@android:string/cancel"
+        android:onClick="cancel"/>
 
     <Button
         android:id="@+id/conf_butn"
@@ -66,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/canc_btn"
         android:layout_alignEnd="@+id/pass_field"
-        android:text="save changes" />
+        android:text="save changes"
+        android:onClick="confirm"/>
 
 </RelativeLayout>
