--- a/Android/app/src/main/res/layout/routine_card.xml
+++ b/Android/app/src/main/res/layout/routine_card.xml
@@ -49,7 +49,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="Start" />
+                android:text="@string/start" />
 
         </RelativeLayout>
 
@@ -75,7 +75,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="16dp"
-                android:text="Edit"/>
+                android:text="@string/edit"/>
 
             <Button
                 android:id="@+id/delete_btn"
@@ -85,13 +85,13 @@
                 android:layout_marginTop="8dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="16dp"
-                android:text="Delete"/>
+                android:text="@string/delete"/>
 
         </RelativeLayout>
 
         <ImageView
             android:id="@+id/expand_arrow"
-            android:contentDescription="arrow"
+            android:contentDescription="@string/arrow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@android:drawable/arrow_down_float" />
