--- a/Android/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Android/app/src/main/res/layout/activity_edit_profile.xml
@@ -10,16 +10,14 @@
         android:id="@+id/username_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="82dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:hint="username"
         android:inputType="textPersonName"
-        android:layout_centerHorizontal="true"
         tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="37dp"
-        android:hint="username"/>
+        tools:layout_editor_absoluteY="37dp" />
 
     <EditText
         android:id="@+id/pass_field"
