--- a/Android/app/src/main/res/layout/activity_heaty_boi.xml
+++ b/Android/app/src/main/res/layout/activity_heaty_boi.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/HeatMapBoi"/>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/exercise_FAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
