--- a/Android/app/src/main/res/layout/activity_heaty_boi.xml
+++ b/Android/app/src/main/res/layout/activity_heaty_boi.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/HeatMapBoi"/>
+        android:src="@drawable/heatMapBoi"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/exercise_FAB"
