--- a/Android/app/src/main/res/layout/activity_view_routine.xml
+++ b/Android/app/src/main/res/layout/activity_view_routine.xml
@@ -7,14 +7,13 @@
     tools:context=".EditRoutineActivity">
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/haet_boi_FAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
         android:layout_marginEnd="48dp"
         android:clickable="true"
         android:focusable="true"
-        android:onClick="heatmapStart"
         android:src="@android:drawable/btn_star_big_on"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
