--- a/Android/app/src/main/res/layout/activity_view_routine.xml
+++ b/Android/app/src/main/res/layout/activity_view_routine.xml
@@ -6,12 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".EditRoutineActivity">
 
+    <Button
+        android:id="@+id/log_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Log Workout" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/haet_boi_FAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
         android:clickable="true"
         android:focusable="true"
         android:src="@android:drawable/btn_star_big_on"
@@ -19,8 +25,14 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_button"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:id="@+id/exercise_list"
